Ensure overflow cards are hidden

--- a/app/assets/stylesheets/trays.css
+++ b/app/assets/stylesheets/trays.css
@@ -22,6 +22,7 @@
       --scale: calc(1 - var(--position) / 30);
       --z: calc(6 - var(--position));
 
+      display: flex;
       inset: auto 0 0;
       inline-size: var(--tray-size);
       outline: 0;
